--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,8 @@
 @import url("https://fonts.googleapis.com/css?family=Arimo:400|Raleway:300,400,700&display=swap");
+p {
+  text-align: justify;
+}
+
 body {
   font-family: "Raleway", sans-serif;
   color: #fff;
